# streams

./: LICENSE  README.md  stack.yaml  tuura-streams.cabal
src/Tuura/: Stream.hs
test/: Main.hs
