name:                tuura-streams
version:             0.0.1
synopsis:            Experimenting with typed streams
homepage:            https://github.com/tuura/streams
license:             MIT
license-file:        LICENSE
author:              Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
maintainer:          Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
copyright:           Andrey Mokhov, 2018
category:            Data Structures
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tuura.Stream
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable test
  hs-source-dirs:      test
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tuura-streams
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tuura/streams
